--- a/.github/workflows/java-dragonwell.yml
+++ b/.github/workflows/java-dragonwell.yml
@@ -30,26 +30,31 @@ jobs:
           - 17
           - 21
     steps:
-      - name: Git checkout for Github repository workspace
+      - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Docker buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          buildkitd-flags: --debug
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
 
-      - name: Login to registry
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.repository_owner }}
+          username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Build and push image
+      - name: Build & Push Dragonwell 21
         uses: docker/build-push-action@v6
         with:
-          context: ./java-dragonwell
-          platforms: linux/amd64, linux/arm64
-          file: ./java-dragonwell/${{ matrix.tag }}/Dockerfile
+          context: ./java-dragonwell/21
+          file: ./java-dragonwell/21/Dockerfile
+          platforms: linux/amd64,linux/arm64
           push: true
-          tags: ghcr.io/qwertbun/pterodactyl-images:java_${{ matrix.tag }}_dragonwell
+          provenance: true
+          tags: |
+            ghcr.io/${{ github.repository_owner }}/pterodactyl-images:java_21_dragonwell
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
